# writeups

./: .gitignore  README.md
ctfs/redpwn-ctf-jun-2020/: crypto-base646464.py  requirements.txt  web-inspector-general.py  web-login.py  web-panda-facts.py  web-static-pastebin.py
ctfs/sans-community-ctf-jun-2020/: a02.py  a03.py  a04.py  c01.py  e09.py  e10.py  e11.py  flags.yml
htb/active/: active.md
htb/cascade/: cascade.md
htb/chatterbox/: chatterbox.md
htb/devel/: devel.md
htb/driver/: driver.md
htb/early-access/: early-access.md
htb/hancliffe/: hancliffe.md
htb/horizontall/: horizontall.md
htb/horizontall/horizontall/: Cargo.toml
htb/horizontall/horizontall/src/: lib.rs  main.rs  reverse_shell.rs  simple_http_server.rs
htb/mantis/: mantis.md
htb/multimaster/: multimaster.md
htb/sauna/: sauna.md
htb/seal/: seal.md
port-swigger-web-academy/access-control/: 01 - Unprotected admin functionality.md  02 - Unprotected admin functionality with unpredictable URL.md  03 - User role controlled by request parameter.md  04 - User role can be modified in user profile.md  05 - URL-based access control can be circumvented.md  06 - Method-based access control can be circumvented.md  07 - User ID controlled by request parameter.md  08 - User ID controlled by request parameter, with unpredictable user IDs.md  12 - Multi-step process with no access control on one step.md  (+2 more)
redpwn-ctf-jun-2020/: crypto-base646464.py  web-inspector-general.py  web-panda-facts.py  web-static-pastebin.py
sans-community-ctf-jun-2020/: a02.py  a03.py  a04.py  c01.py  e10.py
(+185 files in other folders)
