[package]
name = "horizontall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking", "json"] } # reqwest with JSON parsing support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
warp = "0.3"
regex = "1.5.4"
git2 = "0.13.25"
